update package json

--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
-
 {
   "name": "get_thawani_response",
   "version": "0.1.0",
   "main": "Gruntfile.js",
   "author": "YOUR NAME HERE",
-  "scripts" : {
-    "start" : "grunt default" ,
-    "readme" : "grunt readme",
-    "i18n" : "grunt i18n"
+  "scripts": {
+    "start": "grunt default",
+    "readme": "grunt readme",
+    "i18n": "grunt i18n",
+    "tailwind": "tailwindcss -i ./assets/tailwind.css -o ./assets/style.css",
+    "tailwind:watch": "tailwindcss -i ./assets/tailwind.css -o ./assets/style.css --watch"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-wp-i18n": "~0.5.0",
-    "grunt-wp-readme-to-markdown": "~1.0.0"
+    "grunt": "^1.4.1",
+    "grunt-wp-i18n": "^1.0.3",
+    "grunt-wp-readme-to-markdown": "^2.1.0",
+    "tailwindcss": "^3.0.15"
   }
 }
