--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "get_thawani_response",
   "version": "0.1.0",
   "main": "Gruntfile.js",
-  "author": "YOUR NAME HERE",
+  "author": "PhazeRo",
   "scripts": {
     "start": "grunt default",
     "readme": "grunt readme",
@@ -15,5 +15,6 @@
     "grunt-wp-i18n": "^1.0.3",
     "grunt-wp-readme-to-markdown": "^2.1.0",
     "tailwindcss": "^3.0.15"
-  }
+  },
+  "license": "MIT"
 }
